# sr-smiles

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  unexpected_behavior.md
.github/workflows/: ci.yml
docs/source/: api.rst  conf.py  index.rst
docs/source/notebooks/: demo.ipynb  index.rst
examples/: 01_basic_usage.ipynb
src/cgr_smiles/: __init__.py  atom_mapping.py  cgr_to_rxn.py  cli.py  data_augmentation.py  logger.py  reaction_balancing.py  rxn_to_cgr.py  utils.py
src/cgr_smiles/chem_utils/: mol_utils.py  smiles_utils.py  stereo_chem_utils.py
src/cgr_smiles/io/: cli.py  logger.py
src/cgr_smiles/transforms/: cgr_to_rxn.py  rxn_to_cgr.py
src/sr_smiles/: __init__.py  atom_mapping.py  data_augmentation.py  reaction_balancing.py
src/sr_smiles/chem_utils/: list_utils.py  mol_utils.py  smiles_utils.py  stereo_chem_utils.py
src/sr_smiles/io/: cli.py  logger.py
src/sr_smiles/transforms/: rxn_to_sr.py  sr_to_rxn.py
tests/: conftest.py  test_atom_mapping.py  test_cgr_to_rxn.py  test_data_augmentation.py  test_end_to_end.py  test_reaction_balancing.py  test_utils.py
tests/data/: sr_test_cases.csv
tests/data/e2/: __test_out.csv
tests/data/rdb7/: test.csv  train.csv  val.csv
tests/data/rgd1/: 1720.csv  52265.csv
tests/e2e/: test_end_to_end.py
tests/e2e_tests/: roundtrip_failures.csv  test_cli.py  test_end_to_end.py
tests/unit_tests/: test_atom_mapping.py  test_data_augmentation.py  test_logger.py  test_reaction_balancing.py  test_utils.py
tests/unit_tests/test_chem_utils/: test_list_utils.py  test_mol_utils.py  test_smiles_utils.py  test_stereo_chem_utils.py
tests/unit_tests/test_io/: test_logger.py
tests/unit_tests/test_transforms/: test_cgr_to_rxn.py  test_rxn_to_cgr.py  test_rxn_to_sr.py  test_sr_to_rxn.py
