[project]
name = "cgr-smiles"
version = "0.1.0"
description = "A Python library to convert reaction SMILES into CGR-SMILES."
authors = [
    {name = "Charlotte Gerhaher", email = "charlotte.gerhaher@tuwien.ac.at"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rdkit",
    "pandas (>=2.3.2,<3.0.0)",
    "rich (>=14.1.0,<15.0.0)"
]

[project.scripts]
rxn2cgr = "cgr_smiles.cli:main_rxn2cgr"
cgr2rxn = "cgr_smiles.cli:main_cgr2rxn"

[project.optional-dependencies]
rxnmapper = ["rxnmapper (>=0.4.2,<0.5.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pre-commit = "^4.3.0"
ruff = "^0.12.10"
mypy = "^1.17.1"
pytest-cov = "^6.2.1"
sphinx = "~7.3.0"
furo = "^2025.7.19"
sphinx-autodoc-typehints = "~1.18.0"
sphinx-togglebutton = "^0.3.2"
nbsphinx = "^0.9.7"

[tool.ruff.lint]
select = [
    "D",    # docstring checks (pydocstyle)
    "E",    # pycodestyle errors (PEP8)
    "F",    # pyflakes errors (undefined names, unused imports)
    "W",    # warnings (trailing whitespace, blank lines, etc.)
    "I",    # import-related issues (optional, if you care about import order/type)
]
ignore = ["D100"]

[tool.ruff]
line-length = 110
exclude = [
    "examples/01_basic_usage.ipynb",
    "docs/source/notebooks/demo.ipynb"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
markers = [
    "unit: mark a test as a unit test",
    "e2e: mark a test as an end-to-end test"
]
