[project]
name = "sr-smiles"
version = "0.1.1"
description = "A Python library to convert reaction SMILES into superimposed reaction (sr) SMILES."
authors = [
    {name = "Charlotte Gerhaher", email = "charlotte.gerhaher@tuwien.ac.at"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rdkit",
    "pandas (>=2.3.2,<3.0.0)",
    "rich (>=14.1.0,<15.0.0)"
]

[project.scripts]
rxn2sr = "sr_smiles.io.cli:main_rxn2sr"
sr2rxn = "sr_smiles.io.cli:main_sr2rxn"

[project.optional-dependencies]
rxnmapper = ["rxnmapper (>=0.4.2,<0.5.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pre-commit = "^4.3.0"
ruff = "^0.12.10"
mypy = "^1.17.1"
pytest-cov = "^6.2.1"

[tool.ruff.lint]
select = [
    "D",    # docstring checks (pydocstyle)
    "E",    # pycodestyle errors (PEP8)
    "F",    # pyflakes errors (undefined names, unused imports)
    "W",    # warnings (trailing whitespace, blank lines, etc.)
    "I",    # import-related issues (optional, if you care about import order/type)
]
ignore = ["D100"]

[tool.ruff]
line-length = 110
exclude = [
    "examples/01_basic_usage.ipynb"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
markers = [
    "unit: mark a test as a unit test",
    "e2e: mark a test as an end-to-end test"
]
